# lambda-library

./: LICENSE  README.md  books.db  flake.nix  lambda-library.cabal
app-bluefin/: Main.hs
app-eff/: Eff.hs  Main.hs
app-eff-test/: Test.hs
app-effectful/: Main.hs
app1/: Main.hs
app1-test/: Support.hs  Test.hs
app2/: Main.hs
app2-test/: Support.hs  Test.hs
app3/: Main.hs  Task.hs
app3-test/: Support.hs  Test.hs
app4/: Main.hs
app4-test/: Result.hs  Support.hs  Test.hs
app5/: App.hs  Main.hs
app5-test/: Support.hs  Test.hs
docs/: 01-Intro.md  02-Console-Handler.md  03-Task.md  04-Type-Classes.md  05-ReaderT.md
src/: Books.hs
